🔄 synced local 'docker-compose/pelican.yml' with remote 'docker-compose/pelican.yml'

--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -287,7 +287,7 @@ services:
       - dfpelican.enable=true
       - dfpelican.0.hostname=${DB_SUBDOMAIN:-db}.${DOMAIN}
       - dfpelican.0.service=http://dbui:8080
-      - dfpelican.0.access.policy=${DB_POLICY:-authenticate}
+      - dfpelican.0.access.policy=default_tld
       - dfpelican.0.zonename=${DOMAIN}
 
   autoheal:
