--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -270,7 +270,7 @@ services:
     labels:
       - AutohealPelican=true
 
-  dbui:
+  adminer:
     image: ghcr.io/jeliebig/adminer-autologin:4.8.1
     environment:
       - ADMINER_PLUGINS=login-env-vars
@@ -281,12 +281,12 @@ services:
     networks:
       Management:
         aliases:
-          - dbui
+          - adminer
     labels:
       - AutohealPelican=true
       - dfpelican.enable=true
       - dfpelican.0.hostname=${DB_SUBDOMAIN:-db}.${DOMAIN}
-      - dfpelican.0.service=http://dbui:8080
+      - dfpelican.0.service=http://adminer:8080
       - dfpelican.0.access.policy=default_tld
       - dfpelican.0.zonename=${DOMAIN}
 
