--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -314,12 +314,13 @@ services:
     volumes:
       - crowdsec-config:/etc/crowdsec
       - bouncer-config:/etc/crowdsec/bouncers
+    # wget -q0 /etc/crowdsec/bouncers/crowdsec-cloudflare-bouncer-docker.yaml https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/crowdsec-cloudflare-bouncer.yaml
     command: >
       sh -c "apk add --no-cache wget ca-certificates &&
              mkdir -p /etc/crowdsec/acquisitions.d /etc/crowdsec/bouncers &&
              wget -qO /etc/crowdsec/acquis.yaml https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/pterodactyl.yaml &&
-             wget -qO /etc/crowdsec/bouncers/crowdsec-firewall-bouncer.yaml https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/crowdsec-firewall-bouncer.yaml &&
-             wget -q0 /etc/crowdsec/bouncers/crowdsec-cloudflare-bouncer-docker.yaml https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/crowdsec-cloudflare-bouncer.yaml"
+             wget -qO /etc/crowdsec/bouncers/crowdsec-firewall-bouncer.yaml https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/crowdsec-firewall-bouncer.yaml"
+             
              
 
   crowdsec:
