--- a/crowdsec/crowdsec-cloudflare-bouncer.yaml
+++ b/crowdsec/crowdsec-cloudflare-bouncer.yaml
@@ -1,29 +1,40 @@
-# CrowdSec Config
-crowdsec_lapi_url: ${API_URL}
-crowdsec_lapi_key: ${API_KEY}
-crowdsec_update_frequency: 10s
+crowdsec_config:
+  lapi_url: ${API_URL}
+  lapi_key: ${API_KEY}
+  update_frequency: 10s
+  include_scenarios_containing: []
+  exclude_scenarios_containing: []
+  only_include_decisions_from: [] # "cscli", "crowdsec" if you want decisions from the local API only.
+                                  # This will include CAPI decisions, which has 10k+ IPs, and hence might hit API limit for a free account.
+                                  # For more information on this, visit - https://docs.crowdsec.net/u/bouncers/cloudflare-workers/#appendix-test-with-cloudflare-free-plan
+  key_path: ""  # Used for TLS authentification with CrowdSec LAPI
+  cert_path: "" # Used for TLS authentification with CrowdSec LAPI
+  ca_cert_path: "" # Used for TLS authentification with CrowdSec LAPI
 
-include_scenarios_containing: [] # ignore IPs banned for triggering scenarios not containing either of provided word EG ["http"]
-exclude_scenarios_containing: [] # ignore IPs banned for triggering scenarios containing either of provided word EG ["ssh", "smb"]
-only_include_decisions_from: [] #  only include IPs banned due to decisions orginating from provided sources. EG ["cscli", "crowdsec"]
-
-#Cloudflare Config. 
 cloudflare_config:
-  accounts: 
-  - id: ${CF_ACCOUNTID}
-    token: ${CF_APITOKEN}
-    ip_list_prefix: crowdsec
-    default_action: captcha
-    zones:
-    - actions: 
-      - captcha # valid choices are either of managed_challenge, js_challenge, block
-      # zone_id:
-    
+    accounts:    
+        - id: ${CF_ACCOUNTID}
+          zones: #
+            - zone_id: ${DOMAIN}
+              actions:
+                - captcha
+              default_action: captcha # Supported Actions [captcha, ban, none]
+              routes_to_protect: []
+              turnstile:
+                enabled: true
+                rotate_secret_key: true
+                rotate_secret_key_every: 168h0m0s 
+                mode: managed # Supported Modes "managed"|"invisible"|"non-interactive"                
+          token: ${CF_APITOKEN}
+          #account_name: x@x.com
+          ip_list_prefix: crowdsec
+          default_action: managed_challenge
+          total_ip_list_capacity: 5000 # only this many latest IP decisions would be kept          
 
-  update_frequency: 30s # the frequency to update the cloudflare IP list 
-
-# Bouncer Config
-daemon: false
 log_mode: stdout
-log_dir: /var/log/ 
-log_level: info # valid choices are either debug, info, error 
+log_level: info
+
+prometheus:
+    enabled: false
+    listen_addr: 0.0.0.0
+    listen_port: "2112"
