--- a/docker-compose/pelican-wings.yml
+++ b/docker-compose/pelican-wings.yml
@@ -41,7 +41,7 @@ services:
         max-file: "3"
     labels:
       - dfwings.enable=true
-      - dfwings.0.hostname=${NODENAME}.${DOMAIN}
+      - dfwings.0.hostname=${NODE_SUBDOMAIN}.${DOMAIN}
       - dfwings.0.service=http://wings:8080
       - dfwings.0.access.policy=bypass
       - dfwings.0.zonename=${DOMAIN}
@@ -70,7 +70,7 @@ services:
       start_period: 30s
       timeout: 20s 
     environment:
-      - TUNNEL_NAME=wings-${NODENAME}
+      - TUNNEL_NAME=wings-${NODE_SUBDOMAIN}
       - LABEL_PREFIX=dfwings
       - CLOUDFLARED_NETWORK_NAME=wings-mgmt
       - CLOUDFLARED_IMAGE=cloudflare/cloudflared:latest
