--- a/docker-compose/pelican-wings.yml
+++ b/docker-compose/pelican-wings.yml
@@ -27,7 +27,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker/containers/:/var/lib/docker/containers/
-      - config:/etc/pelican/
+      - /etc/pelican/:/etc/pelican/
       - /var/lib/pelican/:/var/lib/pelican/
       - /var/log/pelican/:/var/log/pelican/
       - /tmp/pelican/:/tmp/pelican/
@@ -216,7 +216,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - /var/lib/docker/containers/:/var/lib/docker/containers/
-      - config:/etc/pelican/
+      - /etc/pelican/:/etc/pelican/
       - /var/lib/pelican/:/var/lib/pelican/
       - /var/log/pelican/:/var/log/pelican/
       - /tmp/pelican/:/tmp/pelican/
