🔄 synced local 'docker-compose/pelican-wings.yml' with remote 'docker-compose/pelican-wings.yml'

--- a/docker-compose/pelican-wings.yml
+++ b/docker-compose/pelican-wings.yml
@@ -137,7 +137,7 @@ services:
       init-crowdsec:
         condition: service_completed_successfully
     environment:
-      - COLLECTIONS=lourys/pterodactyl
+      - COLLECTIONS=lourys/pterodactyl,crowdsecurity/linux
       - BOUNCER_KEY_FIREWALL=${CROWDSEC_KEY}
       - DISABLE_ONLINE_API=false
     volumes:
