--- a/docker-compose/pelican-wings.yml
+++ b/docker-compose/pelican-wings.yml
@@ -137,7 +137,7 @@ services:
       init-crowdsec:
         condition: service_completed_successfully
     environment:
-      - COLLECTIONS=lourys/pterodactyl crowdsecurity/linux
+      - COLLECTIONS=lourys/pterodactyl
       - BOUNCER_KEY_FIREWALL=${CROWDSEC_KEY}
       - DISABLE_ONLINE_API=false
     volumes:
