--- a/docker-compose/crowdsec-firewall.yml
+++ b/docker-compose/crowdsec-firewall.yml
@@ -72,6 +72,7 @@ services:
     command: >
       sh -c "apk add --no-cache wget ca-certificates &&
              mkdir -p /etc/crowdsec/acquisitions.d /etc/crowdsec/bouncers &&
+             wget -qO /etc/crowdsec/acquisitions.d/ubuntu.yaml https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/ubuntu.yaml &&
              wget -qO /etc/crowdsec/bouncers/crowdsec-firewall-bouncer.yaml https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/crowdsec-firewall-bouncer.yaml"
 
   autoheal:
