🔄 synced local 'docker-compose/crowdsec-firewall.yml' with remote 'docker-compose/crowdsec-firewall.yml'

--- a/docker-compose/crowdsec-firewall.yml
+++ b/docker-compose/crowdsec-firewall.yml
@@ -31,7 +31,7 @@ services:
     healthcheck:  
       test: ["CMD", "cscli", "version"]
     networks:
-      Management:
+      crowdsec:
         aliases:
           - crowdsec
 
