--- a/docker-compose/crowdsec-pve.yml
+++ b/docker-compose/crowdsec-pve.yml
@@ -66,58 +66,32 @@ services:
 
   pve-sync:
     image: alpine:3.23.2
-    container_name: crowdsec-pve-sync
     network_mode: host
     depends_on:
       engine:
         condition: service_healthy
+    volumes:
+      - scripts:/scripts
     environment:
-      - PVE_URL=https://localhost:${PVE_PORT:-8006}/api2/json
       - PVE_TOKEN_ID=${PVE_TOKEN_ID}
       - PVE_TOKEN_SECRET=${PVE_TOKEN_SECRET}
-      - LAPI_URL=http://localhost:${CROWDSEC_PORT:-8080}/v1
-      - LAPI_KEY=${BOUNCER_KEY}
-    command: >
-      sh -c "apk add --no-cache curl jq &&
-      while true; do
-        echo 'Checking for new bans...'
-        # Get bans from CrowdSec
-        CS_BANS=$$(curl -s -H \"X-Api-Key: $$LAPI_KEY\" $$LAPI_URL/decisions | jq -r '.[].value' | sort)
-        
-        # Get bans from Proxmox (using // empty to handle null results gracefully)
-        PVE_BANS=$$(curl -s -k -H \"Authorization: PVEAPIToken=$$PVE_TOKEN_ID=$$PVE_TOKEN_SECRET\" \
-          \"https://localhost:${PVE_PORT:-8006}/api2/json/cluster/firewall/ipset/crowdsec_bans\" | jq -r '.data[].cidr // empty' | sort)
-        
-        # Add new bans
-        for ip in $$CS_BANS; do
-          if ! echo \"$$PVE_BANS\" | grep -q \"$$ip\"; then
-            echo \"Adding $$ip to Proxmox...\"
-            curl -s -k -X POST -H \"Authorization: PVEAPIToken=$$PVE_TOKEN_ID=$$PVE_TOKEN_SECRET\" \
-              -d \"cidr=$$ip\" \"https://localhost:${PVE_PORT:-8006}/api2/json/cluster/firewall/ipset/crowdsec_bans\" > /dev/null
-          fi
-        done
-        
-        # Remove expired bans
-        for ip in $$PVE_BANS; do
-          if ! echo \"$$CS_BANS\" | grep -q \"$$ip\"; then
-            echo \"Removing $$ip from Proxmox...\"
-            curl -s -k -X DELETE -H \"Authorization: PVEAPIToken=$$PVE_TOKEN_ID=$$PVE_TOKEN_SECRET\" \
-              \"https://localhost:${PVE_PORT:-8006}/api2/json/cluster/firewall/ipset/crowdsec_bans/$$ip\" > /dev/null
-          fi
-        done
-        sleep 300;
-      done"
+      - BOUNCER_KEY=${BOUNCER_KEY}
+      - CROWDSEC_PORT=${CROWDSEC_PORT:-8080}
+      - PVE_PORT=${PVE_PORT:-8006}
+    entrypoint: ["/bin/sh", "/scripts/pve-sync.sh"]
 
   init:
     image: alpine:3.23.2
     volumes:
       - config:/etc/crowdsec
       - bouncer:/etc/crowdsec/bouncers
+      - scripts:/scripts
     command: >
       sh -c "apk add --no-cache wget ca-certificates &&
              mkdir -p /etc/crowdsec/acquisitions.d /etc/crowdsec/bouncers &&
              wget -qO /etc/crowdsec/acquisitions.d/pve.yaml https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/pve.yaml &&
-             wget -qO /etc/crowdsec/bouncers/crowdsec-firewall-bouncer.yaml https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/crowdsec-firewall-bouncer.yaml"
+             wget -qO /etc/crowdsec/bouncers/crowdsec-firewall-bouncer.yaml https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/crowdsec-firewall-bouncer.yaml &&
+             wget -qO /scripts/pve-sync.sh https://raw.githubusercontent.com/trentnbauer/HomelabPublic/main/crowdsec/pve-sync.sh"
 
   autoheal:
     deploy:
@@ -147,3 +121,4 @@ volumes:
   config:
   data:
   bouncer:
+  scripts:
