--- a/docker-compose/crowdsec-firewall.yml
+++ b/docker-compose/crowdsec-firewall.yml
@@ -65,7 +65,7 @@ services:
       - /etc/localtime:/etc/localtime:ro
 
   init:
-    image: alpine:latest
+    image: alpine:3.23.3
     volumes:
       - config:/etc/crowdsec
       - bouncer:/etc/crowdsec/bouncers
