🔄 synced local 'docker-compose/pelican.yml' with remote 'docker-compose/pelican.yml'

--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -31,7 +31,7 @@ services:
           - panel
     volumes:
       - panel-data:/pelican-data
-      - panel-logs:/var/www/html/storage/logs
+      - /logs/pelican:/var/www/html/storage/logs
     environment:
       TZ: ${TZ:-UTC}
       APP_URL: https://${PANEL_SUBDOMAIN:-panel}.${DOMAIN}
