🔄 synced local 'docker-compose/pelican.yml' with remote 'docker-compose/pelican.yml'

--- a/docker-compose/pelican.yml
+++ b/docker-compose/pelican.yml
@@ -104,6 +104,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASS}
       MYSQL_DATABASE: "pelican"
       MYSQL_USER: "pelican"
+      MARIADB_AUTO_UPGRADE: true
     logging:
       driver: "json-file"
       options:
